--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="index.css">
   <title>Frontend Mentor | Results summary component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,33 +15,43 @@
   </style>
 </head>
 <body>
-
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
+  <div class="shadow_box"></div>
   
-  Summary
+  <div class="background_box">
+    <div class="result_box">
+      Your Result
+      76
+      of 100
 
-  Reaction
-  80 / 100
+      Great
+      You scored higher than 65% of the people who have taken these tests.
+    </div>
 
-  Memory
-  92 / 100
+    <div class="summary_box">
+      
+      Summary
 
-  Verbal
-  61 / 100
+      Reaction
+      80 / 100
 
-  Visual
-  72 / 100
+      Memory
+      92 / 100
 
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      Verbal
+      61 / 100
+
+      Visual
+      72 / 100
+
+      Continue
+    </div>
+
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Trinity Johnson</a>.
+    </div>
+
   </div>
+  
 </body>
 </html>
